# ai-cbdes-rule

./: README.md
app/: .gitignore  (+9 more)
app/data/THICV-Pilot_master/Control/PidController/: CMakeLists.txt
app/data/THICV-Pilot_master/Control/PidController/dependence/: controlController.hpp  controlCubicSpline.h  controlCubicSplinePlanner.cc  controlLQRController.cc  controlLQRController.hpp  controlMainZMQ.cc  controlPIDController.cc
app/data/THICV-Pilot_master/Control/PidController/previous/include/: controlController.hpp  controlCubicSpline.h  controlPIDController.hpp  functionalController.h  functionalPid.h
app/data/THICV-Pilot_master/Control/PidController/previous/lib/: libyaml-cpp.so.0.8.0
app/data/THICV-Pilot_master/Control/PidController/previous/src/: controlController.cpp  controlMainZMQ.cpp  controlPIDController.cpp  functionalController.cpp  functionalPid.cpp
app/data/THICV-Pilot_master/Control/PidController/proto/: PlanningMsg.pb.h  control.pb.h  imu.pb.h
app/data/THICV-Pilot_master/Control/PidController/src/: funcControlController.cpp  funcControlController.hpp  funcControlMainZMQ.cpp  funcControlMainZMQ.hpp  funcPidController.cpp  funcPidController.hpp
app/data/THICV-Pilot_master/Control/PidController/test/: main.cpp
app/data/THICV-Pilot_master/Localization/GPS/: .CMakeLists.txt.swp  CMakeLists.txt  INSDGPS.pro  readme  run.sh
app/data/THICV-Pilot_master/Localization/GPS/dependence/: GGA.cpp  GGA.h  GPYBM.cpp  GPYBM.h  INSDGPS.pro  NMEABase.cpp  NMEABase.h  configure.cpp  configure.h  datastruct.h  globalvariable.cpp  globalvariable.h  gpfpd.cpp  gpfpd.h  gpgga.cpp  gpgga.h  gtime.cpp  gtime.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_qianxun.cpp  moc_zmqcommunication.cpp  nmeadata.cpp  nmeadata.h  qianxun.cpp  qianxun.h  ui_mainwindow.h  zmqcommunication.cpp  zmqcommunication.h  ztgeographycoordinatetransform.cpp  ztgeographycoordinatetransform.h
app/data/THICV-Pilot_master/Localization/GPS/proto/Imu/: imu.pb.cc  imu.pb.h  imu.proto
app/data/THICV-Pilot_master/Localization/GPS/src/: .foo.cpp.swp  gpsFunctional.cpp  gpsFunctional.h
app/data/THICV-Pilot_master/Localization/GPS/test/: main.cpp
app/data/THICV-Pilot_master/Localization/MapProgram/MapConstDemo/: CMakeLists.txt
app/data/THICV-Pilot_master/Localization/MapProgram/MapConstDemo/dependence/: localization_MapConstruction.cpp  localization_MapConstruction.h
app/data/THICV-Pilot_master/Localization/MapProgram/MapConstDemo/src/: localizationDeclaration.cpp  localizationDeclaration.h
app/data/THICV-Pilot_master/Localization/MapProgram/MapConstDemo/test/: main.cpp
app/data/THICV-Pilot_master/Perception/MutiTracking/KalmanTracking/: CMakeLists.txt
app/data/THICV-Pilot_master/Perception/MutiTracking/KalmanTracking/dependence/: kalmanfilter.cpp  track.cpp  track.h
app/data/THICV-Pilot_master/Perception/MutiTracking/KalmanTracking/src/: funcKalmanTracking.cpp  funcKalmanTracking.h
app/data/THICV-Pilot_master/Perception/MutiTracking/KalmanTracking/test/: main.cpp
app/data/THICV-Pilot_master/Perception/PerceptionLidar/: CMakeLists.txt  run.sh
app/data/THICV-Pilot_master/Perception/PerceptionLidar/config/: perception.yaml
app/data/THICV-Pilot_master/Perception/PerceptionLidar/dependence/: baseLidarObjectDetector.cpp  baseLidarObjectDetector.h  classicLidarDetector.cpp  classicLidarDetector.h  patchworkpp.cpp  patchworkpp.h
app/data/THICV-Pilot_master/Perception/PerceptionLidar/proto/: cloudData.proto  perception.proto
app/data/THICV-Pilot_master/Perception/PerceptionLidar/src/: functionLidarDetector.cpp  functionLidarDetector.h
app/data/THICV-Pilot_master/Perception/PerceptionLidar/test/: main.cpp  test_pcd.pcd
app/data/THICV-Pilot_master/Planning/LocalPathPlanning/FixedTrajectory/Quinticpolynomials/: CMakeLists.txt
app/data/THICV-Pilot_master/Planning/OnVehicle/: CMakeLists.txt
app/data/THICV-Pilot_master/Planning/OnVehicle/dependence/: globalPlanning.cpp  globalPlanning.h  interpolate.hpp  localPlanning.cpp  localPlanning.hpp  planning.cpp  planning.hpp  planningFigure.cpp
app/data/THICV-Pilot_master/Planning/OnVehicle/dependence/controlMsg/: control.pb.cc  control.pb.h  control.proto
app/data/THICV-Pilot_master/Planning/OnVehicle/dependence/imuMsg/: imu.pb.cc  imu.pb.h  imu.proto
app/data/THICV-Pilot_master/Planning/OnVehicle/dependence/mapMsg/: TrafficLight.cpp  TrafficLight.h  localization_MapAnalysis.cpp  localization_MapAnalysis.h  roadMap suzhou wujiang20230421(12).xodr  roadMap20230214验证正确有环岛.xodr  roadMap202302152352.xodr  roadMap20230215全部瘦身完成成功.xodr  roadMap20230215苏州门口分段.xodr  roadMap_GYYQ.xodr  roadMap_KCYTemp.xodr  roadMap_WJ2.xodr  roadMap_ZTWGC2.0.xodr  roadMapsuzhoukcy20230315.xodr  roadMapyanzhengzhenguquehuandaoqiejiao.xodr  stopPoint.yaml  trafficLight(复件).txt  trafficLight.txt  trafficLight20230919旧地图.txt  苏州科技园20230213.xodr
app/data/THICV-Pilot_master/Planning/OnVehicle/dependence/planningMsg/: PlanningMsg.pb.cc  PlanningMsg.pb.h  PlanningMsg.proto
app/data/THICV-Pilot_master/Planning/OnVehicle/dependence/predictionMsg/: prediction.pb.cc  prediction.pb.h  prediction.proto  prediction_pb2.py
app/data/THICV-Pilot_master/Planning/OnVehicle/dependence/serverMsg/: decision.pb.cc  decision.pb.h  decision.proto  msg2vehicle.pb.cc  msg2vehicle.pb.h  msg2vehicle.proto  objects.pb.cc  objects.pb.h  objects.proto  objectsvec.pb.cc  objectsvec.pb.h  objectsvec.proto  traffic_light.pb.cc  traffic_light.pb.h  traffic_light.proto
app/data/THICV-Pilot_master/Planning/OnVehicle/dependence/uiMsg/: ui.pb.cc  ui.pb.h  ui.proto
app/data/THICV-Pilot_master/Planning/OnVehicle/src/: geometry_m.cpp  geometry_m.h  globalPlanning_m.cpp  globalPlanning_m.h  interpolate_m.cpp  interpolate_m.h  localPlanning_m.cpp  localPlanning_m.hpp  planningFigure_m.cpp
data/gate-workspaces/gate_42eba2cf/: .gate_manifest.json  CMakeLists.txt
data/gate-workspaces/gate_42eba2cf/Control/LQRController/dependence/: controlController.cpp  controlController.hpp
data/gate-workspaces/gate_42eba2cf/Control/LQRController/test/: testControlController.cpp
(+307 files in other folders)
