cmake_minimum_required(VERSION 3.16)
project(gate_workspace LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
file(GLOB_RECURSE GATE_CPP "*.cpp" "*.cc" "*.cxx")
file(GLOB_RECURSE GATE_C "*.c")
if(GATE_CPP)
  add_executable(gate_app ${GATE_CPP})
elseif(GATE_C)
  add_executable(gate_app ${GATE_C})
endif()
